Fixes for dark mode
Acum, dark mode este disponibil pentru instalari de aplicatii.

--- a/stylesheets/appinstall.css
+++ b/stylesheets/appinstall.css
@@ -58,7 +58,6 @@ body{
   text-indent: 15px;
 }
 .negru{
-  color: black;
   font-size: 15px;
   margin-top: -13px;
   text-indent: 15px;
@@ -68,8 +67,6 @@ body{
   height: 36px;
   border-radius: 5px;
   border: 0;
-  color: white;
-  background-color: #de1b1b;
   font-size: 16px;
 }
 a{color: inherit; text-decoration: none; box-shadow: none;  box-decoration-break: none;}
